--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 aniso8601==9.0.1
+cffi==1.14.5
 click==7.1.2
+cryptography==3.4.7
 dnspython==1.16.0
 Flask==1.1.2
 Flask-Cors==3.0.10
 Flask-RESTful==0.3.8
 itsdangerous==1.1.0
 Jinja2==2.11.3
+jwt==1.2.0
 MarkupSafe==1.1.1
+pycparser==2.20
+PyJWT==2.1.0
 pymongo==3.11.3
 pytz==2021.1
 six==1.15.0
